src/tests/code/fail/fail_accessing_non_existant_local_variable.u
entrypoint:~()
{
	foo:i64{bogus};
}
->(foo)